Fixed a double gutter bug on nested columns on mobile.

--- a/css/plugins/grid.less
+++ b/css/plugins/grid.less
@@ -110,8 +110,6 @@
 
 	.grid .row {
 		margin-bottom:0;
-		margin-left:0;
-		margin-right:0;
 	}
 }
 
